# reinforcement_learning_tutorial

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  search.html
.github/workflows/: main_lint.yml
bandits_package/: index.html
docs/: README.md  mkdocs.yml
docs/docs/: bandits_package.md  dynamic_programming_package.md  index.md  simulations_package.md
docs/site/: 404.html  index.html  objects.inv  search.html
docs/site/bandits_package/: index.html
docs/site/search/: search_index.json
docs/site/simulations_package/: index.html
dynamic_programming_package/: index.html
notebooks/: DP_01_simple_square_scape.ipynb  DP_02_policy_iter_action_value_car_rental.ipynb  DP_02_policy_iter_action_value_car_rental_vec.ipynb  DP_02_policy_iter_car_rental.ipynb  DP_02_policy_iter_car_rental_np.ipynb  DP_02_value_iter_car_rental.ipynb  DP_02_value_iter_car_rental_np.ipynb  k_bandits_algorithems.ipynb  k_bandits_algorithms.ipynb
rl/: bandits.py  dynamic_programming.py  dynamic_programming_np.py  dynamic_programming_vec.py  helpers.py  simulations.py
search/: search_index.json
simulations_package/: index.html
tests/: test_dynamic_programming.py  test_dynamic_programming_np.py  test_dynamic_programming_vec.py  test_helpers.py  test_simulations.py
